Improve time complexity of sampling WOR to O(K + size * log(K))

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,7 @@ Imports:
     Rcpp
 URL: https://github.com/vgherard/gsample
 BugReports: https://github.com/vgherard/gsample/issues
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
