--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,6 @@ URL: https://github.com/vgherard/gsample
 BugReports: https://github.com/vgherard/gsample/issues
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
