--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: gsample
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Efficient Sampling from Discrete Probability Distributions
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Valerio Gherardi
+Maintainer: Valerio Gherardi <vgherard@sissa.it>
+Description: Sample from a discrete probability distribution using the Gumbel-Max trick (c.f. \url{https://arxiv.org/pdf/1903.06059.pdf}).
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
@@ -14,6 +13,7 @@ LinkingTo:
     Rcpp
 Imports: 
     Rcpp
+SystemRequirements: C++11
 URL: https://github.com/vgherard/gsample
 BugReports: https://github.com/vgherard/gsample/issues
 Suggests: 
